k8s/persistent-volumes/ingress-nginx-controller.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  selector:
    app: ingress-nginx
  ports:
    - name: http  # Agregar nombre al puerto
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 32064
    - name: https  # Agregar nombre al puerto
      protocol: TCP
      port: 443
      targetPort: 443
      nodePort: 30924
  type: LoadBalancer
