k8s/persistent-volumes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: blandskron.com
    http:
      paths:
      - path: /service-auth
        pathType: Prefix
        backend:
          service:
            name: service-auth
            port:
              number: 8082
      - path: /service-user
        pathType: Prefix
        backend:
          service:
            name: service-user
            port:
              number: 8081
      - path: /pgadmin
        pathType: Prefix
        backend:
          service:
            name: pgadmin
            port:
              number: 80
      - path: /db-digitus
        pathType: Prefix
        backend:
          service:
            name: db-digitus
            port:
              number: 5432
